# SRTtoSRT

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build.yml
scripts/: generate-tauri-icons.mjs
src/: app.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/src/: lib.rs  main.rs
src/lib/: checkpoint.ts  errors.ts  openai.ts  settings.ts  srt.ts  tasks.ts  types.ts
src/lib/native/: desktop.ts
