[package]
name = "subtitle-duet"
version = "0.1.6"
description = "Batch SRT translator powered by OpenAI-compatible APIs"
authors = ["OpenAI Codex"]
edition = "2021"

[lib]
name = "subtitle_duet"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
